# tidal

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  setup.cfg  setup.py  tidal_parser.py
examples/: BUILD  example.cpp  stresstest.cpp
include/logger/: logger.h
include/tidal/: tidal.h
python/: parser.py  plot.py
python/tidal_parser/: __init__.py
tidal_parser/: tidal_parser.py
