[metadata]
name = tidal-parser
version = 0.0.2
author = Daniel Koch
author_email = daniel.p.koch@gmail.com
description = Python parser for binary log files written with the TiDaL C++ logging library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dpkoch/tidal
project_urls =
    Bug Tracker = https://github.com/dpkoch/tidal/issues
    Documentation = https://github.com/dpkoch/tidal
    Source Code = https://github.com/dpkoch/tidal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
package_dir =
     = python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python